<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">知乎笔试</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置选项</string>
    <string name="action_dark">夜间模式</string>
    <string name="action_msg">消息</string>
    <string name="action_share">分享</string>
    <string name="action_collect">收藏</string>
    <string name="action_comment">评论</string>
    <string name="action_like">点赞</string>
    <string name="title_activity_menu">MenuActivity</string>

    <!-- 自定义ListView -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <!-- 下拉刷新 -->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="more">更多</string>
    <string name="loading">正在加载</string>
    <string name="release_to_load_more">放开加载</string>
    <string name="pull_up_to_load_more">上拉加载</string>
    <string name="pull_down_to_load_more">下拉加载</string>
    <!-- 登录 -->
    <string name="login">请登录</string>
    <!-- 登录后 -->
    <string name="collect">我的收藏</string>
    <string name="download">离线下载</string>
    <string name="home">首页</string>
    <string name="title_activity_login">登录</string>
    <string name="today">今日新闻</string>
    <string name="demo">冬天跑步南北方分别怎么穿</string>
    <string name="title_activity_content">文章</string>

</resources>