<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zhihu.activity.ContentActivity" >

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/icon_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_collect"
        android:icon="@drawable/icon_star"
        android:orderInCategory="200"
        android:title="@string/action_collect"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_comment"
        android:icon="@drawable/icon_comment"
        android:orderInCategory="300"
        android:title="@string/action_comment"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_like"
        android:icon="@drawable/icon_like"
        android:orderInCategory="400"
        android:title="@string/action_like"
        app:showAsAction="always"/>

</menu>