<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_light"
            android:orientation="vertical"
            android:padding="@dimen/default_padding" >

            <LinearLayout
                android:id="@+id/info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/icon_avatar" />

                <TextView
                    style="@style/MenuTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/login" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding" >

                <TextView
                    android:id="@+id/collect"
                    style="@style/MenuTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_star"
                    android:drawablePadding="@dimen/default_padding_m"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/collect" />

                <TextView
                    android:id="@+id/download"
                    style="@style/MenuTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin_l"
                    android:drawableLeft="@drawable/icon_download"
                    android:drawablePadding="@dimen/default_padding_m"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/download" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding" >

            <TextView
                style="@style/HomeTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:drawableLeft="@drawable/icon_home2"
                android:drawablePadding="@dimen/default_padding_m"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/home" />
        </LinearLayout>

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:divider="@color/white"
            android:scrollbars="none" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/back_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="@android:color/transparent"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>